syntax = "proto3";
package your.service.v1;
option go_package = "/exp-go";

import "google/api/annotations.proto";

service Category {
  // We can describe GetCategory with comments.
  //
  // {{import "tables.md"}}
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse) {
    option (google.api.http) = {
      get: "/v1/categories/get/{id}"
    };
    }
    // We can describe SearchCategory with comments.
    //
    // {{import "tables.md"}}
    rpc SearchCategory(SearchCategoryRequest) returns (SearchCategoryResponse) {
      option (google.api.http) = {
        get: "/v1/categories/all"
      };
    }
}

message SearchCategoryRequest {
  // This is a comment describing what search category request does.
  string value = 1;
}

message SearchCategoryResponse {
  // This is a comment describing what search category response does.
  string value = 1;
}

message GetCategoryRequest {
  // This is a comment describing what get category request does.
  string id = 1;
}

message GetCategoryResponse {
  // This is a comment describing what get category response does.
  string value = 1;
}
